--- a/locale/bg/LC_MESSAGES/messages.po
+++ b/locale/bg/LC_MESSAGES/messages.po
@@ -37,8 +37,8 @@ msgid "Loading"
 msgstr "Зареждане"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Започване на плащането&hellip;"
+msgid "Beginning payment…"
+msgstr "Започване на плащането…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -49,8 +49,8 @@ msgid "Payment complete"
 msgstr "Плащането завършено"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Опа...&hellip;"
+msgid "Oops…"
+msgstr "Опа...…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -151,8 +151,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Потвърждаване на плащането&hellip;"
+msgid "Verifying payment…"
+msgstr "Потвърждаване на плащането…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -196,5 +196,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Настройване на плащането&hellip;"
+msgid "Setting up payment…"
+msgstr "Настройване на плащането…"
