--- a/locale/fr/LC_MESSAGES/messages.po
+++ b/locale/fr/LC_MESSAGES/messages.po
@@ -42,8 +42,8 @@ msgid "Loading"
 msgstr "Chargement"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Début du paiement &hellip;"
+msgid "Beginning payment…"
+msgstr "Début du paiement …"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -54,8 +54,8 @@ msgid "Payment complete"
 msgstr "Paiement complété"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Oops &hellip;"
+msgid "Oops…"
+msgstr "Oops …"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -156,7 +156,7 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
+msgid "Verifying payment…"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
@@ -201,5 +201,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Configuration du paiement &hellip;"
+msgid "Setting up payment…"
+msgstr "Configuration du paiement …"
