--- a/locale/it/LC_MESSAGES/messages.lang
+++ b/locale/it/LC_MESSAGES/messages.lang
@@ -54,8 +54,8 @@ Disattivata
 Revocata
 
 
-;Beginning payment&hellip;
-Inizio del pagamento in corso&hellip;
+;Beginning payment…
+Inizio del pagamento in corso…
 
 
 ;Sign in to continue with the payment:
@@ -66,12 +66,12 @@ Esegui l'accesso per procedere con il pagamento:
 Accedi
 
 
-;logging you in to continue payment&hellip;
-Accesso per il completamento del pagamento in corso&hellip;
+;logging you in to continue payment…
+Accesso per il completamento del pagamento in corso…
 
 
-;Waiting for payment to complete&hellip;
-In attesa del completamento del pagamento&hellip;
+;Waiting for payment to complete…
+In attesa del completamento del pagamento…
 
 
 ;You have already created a PIN.
