--- a/locale/sq/LC_MESSAGES/messages.po
+++ b/locale/sq/LC_MESSAGES/messages.po
@@ -35,8 +35,8 @@ msgid "Loading"
 msgstr "Po ngarkohet"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Po fillohet pagimi&hellip;"
+msgid "Beginning payment…"
+msgstr "Po fillohet pagimi…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -47,8 +47,8 @@ msgid "Payment complete"
 msgstr "Pagim i plotësuar"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Oops&hellip;"
+msgid "Oops…"
+msgstr "Oops…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -148,8 +148,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Po verifikohet pagesa&hellip;"
+msgid "Verifying payment…"
+msgstr "Po verifikohet pagesa…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -193,5 +193,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Po përgatitet pagesa&hellip;"
+msgid "Setting up payment…"
+msgstr "Po përgatitet pagesa…"
