--- a/locale/templates/LC_MESSAGES/messages.pot
+++ b/locale/templates/LC_MESSAGES/messages.pot
@@ -36,7 +36,7 @@ msgid "Loading"
 msgstr ""
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
+msgid "Beginning payment…"
 msgstr ""
 
 #: public/js/views/login.js:19
@@ -48,7 +48,7 @@ msgid "Payment complete"
 msgstr ""
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
+msgid "Oops…"
 msgstr ""
 
 #: public/js/lib/auth.js:65
@@ -153,7 +153,7 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
+msgid "Verifying payment…"
 msgstr ""
 
 #: public/js/lib/auth.js:29
@@ -199,5 +199,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
+msgid "Setting up payment…"
 msgstr ""
