--- a/locale/el/LC_MESSAGES/messages.po
+++ b/locale/el/LC_MESSAGES/messages.po
@@ -36,8 +36,8 @@ msgid "Loading"
 msgstr "Φόρτωση"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Εκκίνηση πληρωμής&hellip;"
+msgid "Beginning payment…"
+msgstr "Εκκίνηση πληρωμής…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -48,8 +48,8 @@ msgid "Payment complete"
 msgstr "Η πληρωμή ολοκληρώθηκε"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Ωχ&hellip;"
+msgid "Oops…"
+msgstr "Ωχ…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -149,7 +149,7 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
+msgid "Verifying payment…"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
@@ -194,5 +194,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
+msgid "Setting up payment…"
 msgstr ""
