--- a/locale/en_US/LC_MESSAGES/messages.po
+++ b/locale/en_US/LC_MESSAGES/messages.po
@@ -36,8 +36,8 @@ msgid "Loading"
 msgstr "Loading"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Beginning payment&hellip;"
+msgid "Beginning payment…"
+msgstr "Beginning payment…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -48,8 +48,8 @@ msgid "Payment complete"
 msgstr "Payment complete"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Oops&hellip;"
+msgid "Oops…"
+msgstr "Oops…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -149,8 +149,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Verifying payment&hellip;"
+msgid "Verifying payment…"
+msgstr "Verifying payment…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -194,5 +194,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Setting up payment&hellip;"
+msgid "Setting up payment…"
+msgstr "Setting up payment…"
