--- a/locale/hi_IN/LC_MESSAGES/messages.po
+++ b/locale/hi_IN/LC_MESSAGES/messages.po
@@ -37,7 +37,7 @@ msgid "Loading"
 msgstr "लोड हो रहा है"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
+msgid "Beginning payment…"
 msgstr "भुगतान&hellip की शुरुआत;"
 
 #: public/js/views/login.js:19
@@ -49,8 +49,8 @@ msgid "Payment complete"
 msgstr "भुगतान पूरा"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "ऊप्स&hellip;"
+msgid "Oops…"
+msgstr "ऊप्स…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -150,7 +150,7 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
+msgid "Verifying payment…"
 msgstr "भुगतान&hellip को परखना जा रहा है;"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
@@ -195,5 +195,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
+msgid "Setting up payment…"
 msgstr "भुगतान&hellip की स्थापना;"
