--- a/locale/id/LC_MESSAGES/messages.po
+++ b/locale/id/LC_MESSAGES/messages.po
@@ -40,8 +40,8 @@ msgid "Loading"
 msgstr "Memuat..."
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Memulai pembayaran&hellip;"
+msgid "Beginning payment…"
+msgstr "Memulai pembayaran…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -52,8 +52,8 @@ msgid "Payment complete"
 msgstr "Pembayaran selesai"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Ups&hellip;"
+msgid "Oops…"
+msgstr "Ups…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -154,7 +154,7 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
+msgid "Verifying payment…"
 msgstr ""
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
@@ -199,5 +199,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Menyiapkan pembayaran&hellip;"
+msgid "Setting up payment…"
+msgstr "Menyiapkan pembayaran…"
