--- a/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/locale/pt_BR/LC_MESSAGES/messages.po
@@ -42,8 +42,8 @@ msgid "Loading"
 msgstr "Carregando"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Iniciando pagamento&hellip;"
+msgid "Beginning payment…"
+msgstr "Iniciando pagamento…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -54,7 +54,7 @@ msgid "Payment complete"
 msgstr "Pagamento concluído"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
+msgid "Oops…"
 msgstr "Oopshellip;"
 
 #: public/js/lib/auth.js:65
@@ -155,8 +155,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Verificando pagamento&hellip;"
+msgid "Verifying payment…"
+msgstr "Verificando pagamento…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -200,5 +200,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Configurando payment&hellip;"
+msgid "Setting up payment…"
+msgstr "Configurando payment…"
