--- a/locale/sr/LC_MESSAGES/messages.po
+++ b/locale/sr/LC_MESSAGES/messages.po
@@ -38,8 +38,8 @@ msgid "Loading"
 msgstr "Учитавање"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Започињање уплате&hellip;"
+msgid "Beginning payment…"
+msgstr "Започињање уплате…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -50,8 +50,8 @@ msgid "Payment complete"
 msgstr "Плаћање извршено"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Упс&hellip;"
+msgid "Oops…"
+msgstr "Упс…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -151,8 +151,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Верификујемо плаћање&hellip;"
+msgid "Verifying payment…"
+msgstr "Верификујемо плаћање…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -196,5 +196,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Успостављање уплате&hellip;"
+msgid "Setting up payment…"
+msgstr "Успостављање уплате…"
