--- a/locale/tr/LC_MESSAGES/messages.po
+++ b/locale/tr/LC_MESSAGES/messages.po
@@ -39,8 +39,8 @@ msgid "Loading"
 msgstr "Yükleniyor"
 
 #: webpay/base/templates/base.html:32
-msgid "Beginning payment&hellip;"
-msgstr "Ödeme başlatılıyor&hellip;"
+msgid "Beginning payment…"
+msgstr "Ödeme başlatılıyor…"
 
 #: public/js/views/login.js:19
 msgid "Connecting to Persona"
@@ -51,8 +51,8 @@ msgid "Payment complete"
 msgstr "Ödeme tamamlandı"
 
 #: public/js/lib/auth.js:22
-msgid "Oops&hellip;"
-msgstr "Hata&hellip;"
+msgid "Oops…"
+msgstr "Hata…"
 
 #: public/js/lib/auth.js:65
 msgid "This is taking longer than expected. Try again?"
@@ -152,8 +152,8 @@ msgstr ""
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6
 #: webpay/provider/templates/provider/wait-to-finish.html:12
-msgid "Verifying payment&hellip;"
-msgstr "Ödeme doğrulanıyor&hellip;"
+msgid "Verifying payment…"
+msgstr "Ödeme doğrulanıyor…"
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30
 msgid "Retrying..."
@@ -197,5 +197,5 @@ msgid "Was Locked"
 msgstr ""
 
 #: public/js/views/wait-for-tx.js:10
-msgid "Setting up payment&hellip;"
-msgstr "Ödeme ayarlanıyor&hellip;"
+msgid "Setting up payment…"
+msgstr "Ödeme ayarlanıyor…"
